--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ header img {
 }
 
 main {
-    padding: 80px;
+    padding: 70px;
+    padding-bottom: 0px;
     display: flex;
     justify-content: center;
 }
@@ -17,6 +18,7 @@ main {
 .container {
     background-color: hsl(257, 40%, 49%);
     background-image: url('/images/bg-desktop.svg');
+    background-repeat: no-repeat;
     width: 1440px;
     margin: 0 auto;
 }
@@ -29,12 +31,19 @@ div h1, p {
 div h1 {
     font-size: 40px;
     font-weight: 600;   
-    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-bottom: 25px;
 }
 
 div p {
-    font-size: 16px;
-    margin-bottom: 35px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    line-height: 1.5em;
+    margin-bottom: 25px;
+}
+
+.image {
+    margin-top: 10px;
 }
 
 .content-text {
@@ -50,5 +59,33 @@ button {
     height: 50px;
     border: 0 solid ;
     border-radius: 100px;
-    box-shadow: 3px 3px 5px #333333;
+    box-shadow: 3px 3px 10px #333333;
+}
+
+footer {
+    padding-right: 90px;
+    height: 95px;
+    line-height: 70px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* footer div i {
+    font-size: 30px;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border: 1px solid red;
+    border-radius: 100px;
+} */
+
+i.fa {
+    font-size: 1em;
+    width: 2em;
+    text-align: center;
+    line-height: 2em;
+    color: #fff;
+    border: 1px solid white;
+    border-radius: 1em;
+    margin-left: 15px;
 }
